remove repos.dwo.nl